--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -41,6 +41,7 @@ h1,h2,h3,h4,h5,h6 {
     .avatar {
         margin: 1em;
         border-radius: 50%;
+        height: 300px;
     }
 
     .writeup {
